SDKs/microsoft.com/cognitiveservices-Training/1.2/typescript/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

### NPM

```bash
npm add openapi
```

### Yarn

```bash
yarn add openapi
```
<!-- End SDK Installation -->

<!-- Start SDK Example Usage -->
## SDK Example Usage

```typescript
import { SDK, WithSecurity} from "openapi";
import { CreateImagesFromDataRequest, CreateImagesFromDataResponse } from "openapi/src/sdk/models/operations";
import { AxiosError } from "axios";


const sdk = new SDK();
    
const req: CreateImagesFromDataRequest = {
  pathParams: {
    projectId: "reiciendis",
  },
  queryParams: {
    tagIds: [
      "suscipit",
    ],
  },
  headers: {
    trainingKey: "dolor",
  },
  request: {
    imageData: {
      content: "quia".encode(),
      imageData: "rerum",
    },
  },
};

sdk.sdk.createImagesFromData(req).then((res: CreateImagesFromDataResponse | AxiosError) => {
   // handle response
});
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### SDK SDK

* `createImagesFromData` - Add the provided images to the set of training images
* `createProject` - Create a project
* `createTag` - Create a tag for the project
* `deleteImageTags` - Remove a set of tags from a set of images
* `deleteImages` - Delete images from the set of training images
* `deleteIteration` - Delete a specific iteration of a project
* `deletePrediction` - Delete a set of predicted images and their associated prediction results
* `deleteProject` - Delete a specific project
* `deleteTag` - Delete a tag from the project
* `exportIteration` - Export a trained iteration
* `getAccountInfo` - Get basic information about your account
* `getDomain` - Get information about a specific domain
* `getDomains` - Get a list of the available domains
* `getExports` - Get the list of exports for a specific iteration
* `getIteration` - Get a specific iteration
* `getIterationPerformance` - Get detailed performance information about a trained iteration
* `getIterations` - Get iterations for the project
* `getProject` - Get a specific project
* `getProjects` - Get your projects
* `getTag` - Get information about a specific tag
* `getTaggedImages` - Get tagged images for a given project iteration
* `getTags` - Get the tags for a given project and iteration
* `getUntaggedImages` - Get untagged images for a given project iteration
* `quickTestImage` - Quick test an image
* `quickTestImageUrl` - Quick test an image url
* `trainProject` - Queues project for training
* `updateIteration` - Update a specific iteration
* `updateProject` - Update a specific project
* `updateTag` - Update a tag

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
